@@ -1,3 +1,8 @@
+2024-03-09  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/asian.R: Remove three redundant duplicate methods available via
+	class 'option' inherited from
+
 2024-02-01  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): New release 0.4.21
